Fixed functions for manipulating of the collapsing window with settings. Improved layout behavior for different screen width.

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,5 +1,4 @@
 .collapsing {
-    overflow: hidden;
     transition: height 0.3s linear;
     height: auto;
 }
